--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
   <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Web Development')">Web Development</button>
   <button class="tablinks" onclick="openCity(event, 'Computer Vision')">Computer Vision</button>
+  <button class="tablinks" onclick="openCity(event, 'Hackerrank Profile Status')">Hackerrank Profile Status</button>
+  <button class="tablinks" onclick="openCity(event, 'LeetCode Profile Status')">LeetCode Profile Status</button>
 </div>
 
 <!-- Tab content -->
@@ -99,9 +101,19 @@
 <div id="Computer Vision" class="tabcontent">
   <p>In this project,created a real time interface for real time object detection through image classification and detector algorithm used is YOLO v4.
 Successfully completed the project with 95% accuracy
-and with FPS of 30</p>
+and with FPS of 30</p>  
  <span onclick="this.parentElement.style.display='none'" class="topright">x</span>
 </div>
+<div id="Hackerrank Profile Status" class="tabcontent">
+  <p>Achieved Certifications of the following Languages: Python(Basic), SQL(Basic), and CSS. Currently having Badges as Java 5-Star Gold Badge with 403 points, Pytho 3-Star Silver Badge with 115 points, and SQL 2-Star Bronze Level with 260 points. The badges may vary with date.
+  </p>
+   <span onclick="this.parentElement.style.display='none'" class="topright">x</span>
+</div>
+ <div id="LeetCode Profile Status" class="tabcontent">
+  <p>Currently having a rank of 1,230,114 with 40+ Solved Problems from Data Structures and Algorithms using Programming Languages such as Python3 and Java. The rank and the Solved problems may vary with time.</p>
+   <span onclick="this.parentElement.style.display='none'" class="topright">x</span>
+</div>   
+
 <section>
 
 
